--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
         Бывает целая и сломанная. В отличие от большинства транспорта, целую мототележку нельзя разобрать
         или разломать на металлолом, а после поломки нельзя починить. Без топлива персонаж фактически
         несёт мототележку на себе, как и весь остальной транспорт, который обладает малым весом. \n- С v.708
-        можно использовать в квесте ""Просьба матери"".</string>
+        можно использовать в квесте \"Просьба матери\".</string>
 
     <string name="motorized_cart_metod_polucenia" translatable="false">Единственным способом получения мототележки является
         самостоятельная сборка, начиная с 30 уровня; схема открывается за 6 очков исследований.</string>
@@ -120,12 +120,19 @@
     <string name="motorized_cart_slomanaya_metod_polucenia" translatable="false">Из рабочей мототележки.</string>
 
     <!--мотоцикл-->
-    <string name="motocycle_description" translatable="false">Мотоцикл — бензиновый транспорт. Обладает малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
+    <string name="motocycle_opisanie" translatable="false">Мотоцикл — бензиновый транспорт. Обладает
+        малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
+    <string name="motocycle_slomanyi_opisanie" translatable="false">Сломанный мотоцикл (как с остатками
+    бензина в баке, так и без него) можно случайным образом найти в следующих зданиях:
+    \n-Гараж. \n-Автомастерская. \n-АЗС. \n-Техникум (мастерские). \n-Отделение милиции (парковка и гаражи).
+        \n-Воинская часть (гаражи). \n-Малая база бандитов. \n-Средняя база бандитов (гаражи).
+        \n-Большая база бандитов (гаражи). \n-Дорога в городах.</string>
+
+
 
 
     <!--ЗАЗ-->
     <string name="clasic_mobile_description" translatable="false">ЗАЗ-968 — средний транспорт, который можно собрать с помощью мастера в Туле на 4 уровне мастерской. В народе его называют «Запорожец».</string>
-
 
 
     <string name="vaz2101_description" translatable="false">ВАЗ-2101 — средний транспорт, который можно Собрать с помощью мастера в Брянске на 4 уровне мастерской и в Арзамасе на 3 уровне мастерской. В народе его называют «Копейкой».</string>
@@ -155,6 +162,10 @@
     <string name="kg_0">0kg</string>
     <string name="km_0">0km</string>
     <string name="kmh_0">0km/h</string>
+    <string name="broken_motorized_cart">Broken motorized cart</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="kg_350">350kg</string>
+    <string name="razborka">DISASSEMBLY</string>
 
 
 </resources>
