--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="quests">QUESTS</string>
+    <string name="app_name" translatable="false">AssistantDayr</string>
+
 
     <!-- названия транспорта для ресайклвью-->
-    <string name="app_name" translatable="false">AssistantDayr</string>
     <string name="bicycle">Bicycle</string>
     <string name="motocycle">Bike</string>
     <string name="clasic_mobile">ZAZ-968</string>
@@ -20,114 +20,121 @@
     <string name="raft">Raft</string>
     <string name="motorboat">Motor boat</string>
     <string name="belaz">BelAZ</string>
-    <string name="trebuemiy_lvl">Required level</string>
+    <string name="bicycle_cart">Bicycle with a cart</string>
     <string name="telega">Cart</string>
+    <string name="motorized_cart">Motorized cart</string>
+    <string name="broken_motorized_cart">Broken motorized cart</string>
+    <string name="sorvigolova">Daredevil</string>
+    <string name="sorvigolova_polet">Daredevil "FLIGHT"</string>
+
+
+    <string name="trebuemiy_lvl">Required level</string>
+    <string name="quests">QUESTS</string>
     <string name="specifications">SPECIFICATIONS</string>
     <string name="repair">REPAIR</string>
     <string name="yes">YES</string>
+    <string name="no">NO</string>
+
     <string name="instrument">Tool kit</string>
     <string name="screw">Screw</string>
     <string name="engine_oil">Engine oil</string>
     <string name="assemble">ASSEMBLE</string>
     <string name="production_method">PRODUCTION METHOD</string>
-    <string name="bicycle_cart">Bicycle with a cart</string>
+
     <string name="load_capacity">Load capacity</string>
     <string name="weight">Weight</string>
     <string name="max_mileage">Max. mileage</string>
     <string name="max_speed">Max. speed</string>
-    <string name="kmh_9">9km/h</string>
-    <string name="kg_35">35kg</string>
-    <string name="kg_70">70kg</string>
-    <string name="km_1000">1000km</string>
-    <string name="pcs_1">1pcs</string>
-    <string name="no">NO</string>
+
+
     <string name="experience">Experience</string>
     <string name="bicycle_parts">Bicycle parts</string>
     <string name="glue_duc">Glue or duct tape</string>
-    <string name="pcs_3">3pcs</string>
-    <string name="lvl_20">20lvl</string>
-    <string name="lvl_10">10lvl</string>
-    <string name="xp_30" translatable="false">30xp</string>
     <string name="final_result">Final result</string>
-    <string name="pcs_2">2pcs</string>
-    <string name="gr_40">40gr</string>
-    <string name="xp_150" translatable="false">150xp</string>
+    <string name="razborka">DISASSEMBLY</string>
     <string name="wire">Wire</string>
+
+
+    <!-- километры в час -->
+    <string name="kmh_0">0km/h</string>
+    <string name="kmh_9">9km/h</string>
+    <string name="kmh_20">20km/h</string>
+    <string name="kmh_40">40km/h</string>
+    <string name="kmh_100">100km/h</string>
+
+    <!-- вес предмета -->
+    <string name="kg_0">0kg</string>
+    <string name="kg_35">35kg</string>
+    <string name="kg_50">50kg</string>
+    <string name="kg_70">70kg</string>
+    <string name="kg_120">120kg</string>
+    <string name="kg_300">300kg</string>
+    <string name="kg_350">350kg</string>
+    <string name="kg_666">666kg</string>
+
+    <!-- расстояние -->
+    <string name="km_0">0km</string>
+    <string name="km_1000">1000km</string>
+    <string name="km_3000">3000km</string>
+
+    <!-- штук -->
+    <string name="pcs_1">1pcs</string>
+    <string name="pcs_2">2pcs</string>
+    <string name="pcs_3">3pcs</string>
+    <string name="pcs_4">4pcs</string>
+    <string name="pcs_5">5pcs</string>
+    <string name="pcs_20">20pcs</string>
+    <string name="pcs_100">100pcs</string>
+    <string name="pcs_120">120pcs</string>
+
+
+    <!-- уровень персонажа -->
+    <string name="lvl_10">10lvl</string>
+    <string name="lvl_20">20lvl</string>
+    <string name="lvl_30">30lvl</string>
+
+    <!-- получение опыта -->
+    <string name="xp_30" translatable="false">30xp</string>
+    <string name="xp_150" translatable="false">150xp</string>
+    <string name="xp_850" translatable="false">850xp</string>
+
+    <!-- граммы -->
+
+    <string name="gr_30">30gr</string>
+    <string name="gr_40">40gr</string>
+    <string name="gr_50">50gr</string>
+    <string name="gr_100">100gr</string>
+    <string name="gr_1000" translatable="false">1k</string>
+    <string name="gr_7000" translatable="false">7k</string>
 
 
     <!-- описание транспорта для карточки транспорта -->
     <!-- телега-->
-    <string name="telega_description">A trolley is the simplest device for transporting goods.
-        According to the game mechanics, it refers to light transport, since it occupies a slot designed
-        for it in the equipment window. With a cart, the Survivor moves as slowly as on foot, however,
-        he can take away a much larger load. When used as a vehicle, the trolley is subject to wear and
-        can be repaired. When reaching 0% strength, it breaks and we get 2 parts of the bike. The trolley
-        can also be used to assemble a bicycle with a trolley or disassembled into components.</string>
-
-    <string name="telega_metod_polucenia" translatable="false">Купить в поселении под Ленинградом за 125 черных рублей.
-        Найти случайным образом в следующих зданиях: Стройка (любой сектор). Воинская часть (склад)</string>
-
+    <string name="telega_description">A trolley is the simplest device for transporting goods. According to the game mechanics, it refers to light transport, since it occupies a slot designed for it in the equipment window. With a cart, the Survivor moves as slowly as on foot, however, he can take away a much larger load. When used as a vehicle, the trolley is subject to wear and can be repaired. When reaching 0% strength, it breaks and we get 2 parts of the bike. The trolley can also be used to assemble a bicycle with a trolley or disassembled into components.</string>
+    <string name="telega_metod_polucenia" translatable="false">Купить в поселении под Ленинградом за 125 черных рублей. Найти случайным образом в следующих зданиях: Стройка (любой сектор). Воинская часть (склад)</string>
 
     <!--  велосипед -->
-    <string name="bicycle_description" translatable="false">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью,
-        однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком.
-        Может быть целым, повреждённым и сломанным. При использовании в роли транспортного средства
-        велосипед подвергается износу и может быть отремонтирован. При достижении 0% прочности он
-        становится поврежденным. Поврежденный велосипед нельзя использовать по прямому назначению,
-        а также разобрать на запчасти. Поврежденный велосипед можно отремонтировать. Ремонт
-        поврежденного велосипеда не отличается от ремонта целого и ремонтируется на 25% прочности.
-        Целый велосипед может быть использован для сборки велосипеда с тележкой.
-    </string>
-
-    <string name="bicycle_metod_polucenia" translatable="false">Целый велосипед можно собрать самостоятельно,
-        начиная с 10 уровня. Требуется 6 очков исследований. По сценарию целый велосипед можно найти
-        в убежищах возле Мурманска и Беломорска.</string>
-    <string name="bicycle_slomaniy_description" translatable="false">Велосипед — лёгкий транспорт,
-        обладающий минимальной грузоподъёмностью,
-        однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком.
-        Может быть целым, повреждённым и сломанным.
-    </string>
-    <string name="bicycle_metod_polucenia_slomaniy" translatable="false">Сломанный велосипед можно
-        случайным образом найти в следующих зданиях: \n- Школа (спортзал). \n- Почтовое отделение.
-        \n- Уцелевший дом. \n- Дорога в городах.</string>
-
+    <string name="bicycle_description" translatable="false">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью, однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком. Может быть целым, повреждённым и сломанным. При использовании в роли транспортного средства велосипед подвергается износу и может быть отремонтирован. При достижении 0% прочности он становится поврежденным. Поврежденный велосипед нельзя использовать по прямому назначению, а также разобрать на запчасти. Поврежденный велосипед можно отремонтировать. Ремонт поврежденного велосипеда не отличается от ремонта целого и ремонтируется на 25% прочности. Целый велосипед может быть использован для сборки велосипеда с тележкой.</string>
+    <string name="bicycle_metod_polucenia" translatable="false">Целый велосипед можно собрать самостоятельно, начиная с 10 уровня. Требуется 6 очков исследований. По сценарию целый велосипед можно найти в убежищах возле Мурманска и Беломорска.</string>
+    <string name="bicycle_slomaniy_description" translatable="false">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью, однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком. Может быть целым, повреждённым и сломанным.</string>
+    <string name="bicycle_metod_polucenia_slomaniy" translatable="false">Сломанный велосипед можно случайным образом найти в следующих зданиях: \n- Школа (спортзал). \n- Почтовое отделение.\n- Уцелевший дом. \n- Дорога в городах.</string>
 
     <!-- велосипед с тележкой-->
-    <string name="bicycle_cart_description" translatable="false">Велосипед с тележкой — лёгкий
-        транспорт, совмещающий в себе скорость велосипеда с грузоподъёмностью тележки.
-    </string>
-
-    <string name="bicycle_cart_metod_polucenia" translatable="false">Собрать велосипед с тележкой можно
-        самостоятельно, начиная с 20 уровня или у мастера в поселении Олонец, при наличии компонентов для сборки.
-    </string>
-
+    <string name="bicycle_cart_description" translatable="false">Велосипед с тележкой — лёгкий транспорт, совмещающий в себе скорость велосипеда с грузоподъёмностью тележки.</string>
+    <string name="bicycle_cart_metod_polucenia" translatable="false">Собрать велосипед с тележкой можно самостоятельно, начиная с 20 уровня или у мастера в поселении Олонец, при наличии компонентов для сборки.</string>
 
     <!--мототележка-->
-    <string name="motorized_cart_description" translatable="false">Мототележка — первый наземный
-        бензиновый транспорт, доступный игроку, является модификацией велосипеда с тележкой. Обладает
-        наименьшим расходом топлива среди среднего транспорта, но низкой скоростью и малой грузоподъёмностью.
-        Бывает целая и сломанная. В отличие от большинства транспорта, целую мототележку нельзя разобрать
-        или разломать на металлолом, а после поломки нельзя починить. Без топлива персонаж фактически
-        несёт мототележку на себе, как и весь остальной транспорт, который обладает малым весом. \n- С v.708
-        можно использовать в квесте \"Просьба матери\".</string>
-
-    <string name="motorized_cart_metod_polucenia" translatable="false">Единственным способом получения мототележки является
-        самостоятельная сборка, начиная с 30 уровня; схема открывается за 6 очков исследований.</string>
-
-    <string name="motorized_cart_slomanaya" translatable="false">Сломанную мототележку нельзя починить,
-        можно только разобрать на запчасти.</string>
-
+    <string name="motorized_cart_description" translatable="false">Мототележка — первый наземный бензиновый транспорт, доступный игроку, является модификацией велосипеда с тележкой. Обладает наименьшим расходом топлива среди среднего транспорта, но низкой скоростью и малой грузоподъёмностью. Бывает целая и сломанная. В отличие от большинства транспорта, целую мототележку нельзя разобрать или разломать на металлолом, а после поломки нельзя починить. Без топлива персонаж фактически несёт мототележку на себе, как и весь остальной транспорт, который обладает малым весом. \n- С v.708 можно использовать в квесте \"Просьба матери\".</string>
+    <string name="motorized_cart_metod_polucenia" translatable="false">Единственным способом получения мототележки является самостоятельная сборка, начиная с 30 уровня; схема открывается за 6 очков исследований.</string>
+    <string name="motorized_cart_slomanaya" translatable="false">Сломанную мототележку нельзя починить, можно только разобрать на запчасти.</string>
     <string name="motorized_cart_slomanaya_metod_polucenia" translatable="false">Из рабочей мототележки.</string>
 
     <!--мотоцикл-->
-    <string name="motocycle_opisanie" translatable="false">Мотоцикл — бензиновый транспорт. Обладает
-        малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
-    <string name="motocycle_slomanyi_opisanie" translatable="false">Сломанный мотоцикл (как с остатками
-    бензина в баке, так и без него) можно случайным образом найти в следующих зданиях:
-    \n-Гараж. \n-Автомастерская. \n-АЗС. \n-Техникум (мастерские). \n-Отделение милиции (парковка и гаражи).
-        \n-Воинская часть (гаражи). \n-Малая база бандитов. \n-Средняя база бандитов (гаражи).
-        \n-Большая база бандитов (гаражи). \n-Дорога в городах.</string>
-
+    <string name="motocycle_opisanie" translatable="false">Мотоцикл — бензиновый транспорт. Обладает малым расходом топлива и малой грузоподъёмностью. Бывает целый, сломанный и разобранный.</string>
+    <string name="motocycle_slomanyi_opisanie" translatable="false">Сломанный мотоцикл (как с остатками бензина в баке, так и без него) можно случайным образом найти в следующих зданиях:\n-Гараж. \n-Автомастерская. \n-АЗС. \n-Техникум (мастерские). \n-Отделение милиции (парковка и гаражи).\n-Воинская часть (гаражи). \n-Малая база бандитов. \n-Средняя база бандитов (гаражи).\n-Большая база бандитов (гаражи). \n-Дорога в городах.</string>
+    <string name="motocycle_metod_polucenia" translatable="false">Самостоятельная сборка, начиная с 40 уровня; схема открывается за 6 очков исследований. \nПриобретение в игровом магазине за крышки (появляется при достижении определенного прогресса в игре).</string>
+    <string name="sorvigolova_opisanie" translatable="false">Сорвиголова — уникальный транспорт, добавленный к Хэллоуискому событию в 2019 году. Мотоцикл, одержимый духом проклятого коня всадника без головы. Обладает уникальной способностью к полету.</string>
+    <string name="sorvigolova_metod_polucenia" translatable="false">Получить череп сорвиголовы за победу над Всадником без головы и собрать мотоцикл из этого черепа. Так же можно купить в магазине в баре «Честный чёрт» за 9000 золотых монет и 1 Знак охотника. Покупается в режиме «Полёт». </string>
 
 
 
@@ -149,23 +156,7 @@
     <string name="raft_description" translatable="false">Моторная лодка — водный транспорт в игре Day R.</string>
     <string name="motorboat_description" translatable="false">Самодельный плот — водный транспорт, который можно собрать самостоятельно. Позволяет передвигаться по воде и по болоту. Не подвержен износу. Также самодельный плот является компонентом для создания плота с мотором.</string>
     <string name="belaz_description" translatable="false">БелАЗ — уникальный транспорт, единственным способом получить который является прохождение квеста «Город на колесах». Обладает самой высокой грузоподъёмностью в игре и не требует топлива. В народе его называют «Белка».</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="motorized_cart">Motorized cart</string>
-    <string name="kg_50">50kg</string>
-    <string name="kg_120">120kg</string>
-    <string name="km_3000">3000km</string>
-    <string name="kmh_20">20km/h</string>
-    <string name="pcs_5">5pcs</string>
-    <string name="lvl_30">30lvl</string>
-    <string name="gr_30">30gr</string>
-    <string name="xp_850" translatable="false">850xp</string>
-    <string name="kg_0">0kg</string>
-    <string name="km_0">0km</string>
-    <string name="kmh_0">0km/h</string>
-    <string name="broken_motorized_cart">Broken motorized cart</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="kg_350">350kg</string>
-    <string name="razborka">DISASSEMBLY</string>
+
 
 
 </resources>
